--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.85.1"
   },
   "scripts": {
     "start": "react-scripts start",
